testsuite/gnatprove/tests/576__access_subtype/test.out
test.adb:5:12: error: type invariant in a nested package is not yet supported
test.adb:6:07: error: "T" is not allowed in SPARK
test.adb:6:07: error: violation of aspect SPARK_Mode at line 1
gnatprove: error during flow analysis and proof
